--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
     border-radius: 50%;
     border: 4px solid black;
     margin-top: 10px;
-    display: block;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,12 +85,13 @@
 }
 
 .about p{
-    width: 850px;
-    height: 550px;
+    width: 500px;
+    height: 600px;
+    overflow-y: auto;
     padding: 30px;
     position: absolute;
     top: 20%;
-    left: 5%;
+    left: 32%;
     font-size: 25px;
     border: 3px solid black;
     border-radius: 25px;
@@ -101,5 +101,102 @@
      justify-content: center;
      text-transform: capitalize;
     background-color: wheat;
+   
 
+}
+
+
+                                 /* movile-cover-side */
+
+.backend{
+    width: 40vh;
+    height: 90vh;
+    border-radius: 30px;
+    position: absolute;
+   left: 10%;
+   top: 5%;
+    border: 3px solid black;
+    box-shadow: 5px 10px 5px 10px rgba(0,0,0,0.4);
+    background-image: url('images/peakpx1.jpg');
+    
+}
+.backend-child{
+    width: 20vh;
+    height: 27vh;
+    border-radius: 30px;
+    position: absolute;
+   left: 3%;
+   top: 2%;
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    box-shadow: 5px 10px 5px 10px rgba(0,0,0,0.4);
+    
+    
+}
+.camera{
+    width: 18.5vh;
+    height: 10vh;
+    border-radius: 25px;
+    border: 3px solid black;
+    margin-top: 10px;
+    background-color: rgba(0,0,0,0.2);
+}
+
+.camera-child1{
+    width: 10vh;
+    height: 8vh;
+    border-radius: 25px;
+    border: 3px solid black;
+    margin: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.camera-child2{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 3px solid black;
+    background-color: black;
+}
+.cam1{
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.2);
+    
+    
+    
+}
+.down-camers{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 40px;
+    margin-top: 25px;
+    margin-left: 25px;
+}  
+    #light{
+        
+        background-color: white;
+    }
+
+.main{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: black;
+}
+
+.brand-name h1 {
+   position: absolute;
+   bottom: 0;
+   bottom: 20%;
+   transform: rotate(270deg);
+   
 }
